force-app/main/default/objects/Products__c/fields/Account_ST_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_ST_Name__c</fullName>
    <label>Account ST Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>