force-app/main/default/objects/Products__c/fields/Asset_status__c.field-meta.xml
<CustomField>
    <fullName>Asset_status__c</fullName>
    <label>Asset status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>