force-app/main/default/objects/Products__c/fields/Business_Group__c.field-meta.xml
<CustomField>
    <fullName>Business_Group__c</fullName>
    <label>Business Group</label>
    <length>25</length>
    <type>Text</type>
</CustomField>