force-app/main/default/objects/Products__c/fields/Contarct_item_end_date__c.field-meta.xml
<CustomField>
    <fullName>Contarct_item_end_date__c</fullName>
    <label>Contarct item end date</label>
    <type>Date</type>
</CustomField>