force-app/main/default/objects/Products__c/fields/Contract_item_start_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_item_start_date__c</fullName>
    <label>Contract item start date</label>
    <type>Date</type>
</CustomField>