force-app/main/default/objects/Products__c/fields/Customer_ST_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_ST_Name__c</fullName>
    <label>Customer ST Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>