force-app/main/default/objects/Products__c/fields/Distributor_ID__c.field-meta.xml
<CustomField>
    <fullName>Distributor_ID__c</fullName>
    <label>Distributor ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>