force-app/main/default/objects/Products__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <label>Distributor Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>