force-app/main/default/objects/Products__c/fields/End_customer_address__c.field-meta.xml
<CustomField>
    <fullName>End_customer_address__c</fullName>
    <label>End customer address</label>
    <length>25</length>
    <type>Text</type>
</CustomField>