force-app/main/default/objects/Products__c/fields/End_Customer_name__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_name__c</fullName>
    <label>End Customer name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>