force-app/main/default/objects/Products__c/fields/EOSL_date__c.field-meta.xml
<CustomField>
    <fullName>EOSL_date__c</fullName>
    <label>EOSL date</label>
    <type>Date</type>
</CustomField>