force-app/main/default/objects/Products__c/fields/Final_ship_date__c.field-meta.xml
<CustomField>
    <fullName>Final_ship_date__c</fullName>
    <label>Final ship date</label>
    <type>Date</type>
</CustomField>