force-app/main/default/objects/Products__c/fields/PL_Description__c.field-meta.xml
<CustomField>
    <fullName>PL_Description__c</fullName>
    <label>PL Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>