force-app/main/default/objects/Products__c/fields/Product_Age__c.field-meta.xml
<CustomField>
    <fullName>Product_Age__c</fullName>
    <label>Product Age</label>
    <length>25</length>
    <type>Text</type>
</CustomField>