force-app/main/default/objects/Products__c/fields/Purchase_order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_order__c</fullName>
    <label>Purchase order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>