force-app/main/default/objects/Products__c/fields/Renewal_status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_status__c</fullName>
    <label>Renewal status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>