force-app/main/default/objects/Products__c/fields/Reseller_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Name__c</fullName>
    <label>Reseller Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>