force-app/main/default/objects/Products__c/fields/Sold_to_name__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_name__c</fullName>
    <label>Sold to name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>