force-app/main/default/objects/Products__c/fields/Warranty_End_date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_date__c</fullName>
    <label>Warranty End date</label>
    <type>Date</type>
</CustomField>